tests/negative/traits/mismatch_method_param_arity.orng
trait My_Trait {
    fn f(self) -> ()
}

impl My_Trait for Int {
    fn f(self, x: Int) -> () {}
}

fn main() -> Int {
    4
}